--- a/src/styles/main.module.scss
+++ b/src/styles/main.module.scss
@@ -33,3 +33,5 @@ $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/close";
 
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/modals";
+
+@import "./track.svg.scss";
